# thermal-monitor

./: CMakeLists.txt  README.md
plasmoid/: metadata.desktop
plasmoid/contents/ui/: TemperatureItem.qml  main.qml
